[package]
name = "janus"
version = "0.2.0"
authors = ["Scott Raine <me@nylar.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/uw-labs/janus"
description = """
Janus is an abstraction for synchronous/asynchronous message publishing and consumption.
"""
documentation = "https://docs.rs/janus/"

[dependencies]
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
futures-sink = "0.3"
futures-util = { version = "0.3", features = ["sink"] }

[workspace]
members = [
  "kafka",
]
exclude = [
  "examples",
]
