[package]
name = "janus-kafka"
version = "0.1.0"
authors = ["Scott Raine <me@nylar.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
janus = { version = "0.1", path = "../" }
owning_ref = "0.4"
rdkafka = { version = "0.24", default-features = false, features = ["libz"] }
smol = { version = "0.1", optional = true }

[features]
default = ["tokio-rt"]
tokio-rt = ["rdkafka/tokio"]
smol-rt = ["smol"]

[dev-dependencies]
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "0.2", features = ["full"] }
