[package]
name = "janus-kafka"
version = "0.4.1"
authors = ["Scott Raine <me@nylar.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/uw-labs/janus"
description = """
Kafka backend for Janus.
"""
documentation = "https://docs.rs/janus-kafka/"

[dependencies]
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
janus = { version = "0.2", path = "../" }
owning_ref = "0.4"
prometheus = { version = "0.11", default-features = false, optional = true }
rdkafka = { version = "0.25", default-features = false, features = ["libz"] }
serde = { version = "1", optional = true }

[features]
default = ["tokio-rt"]
tokio-rt = ["rdkafka/tokio"]
serde1 = ["serde"]
instrumented = ["prometheus"]

[dev-dependencies]
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
