[package]
name = "janus-example-async-std-kafka"
version = "0.1.0"
authors = ["Scott Raine <me@nylar.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes", "unstable"]}
futures = "0.3"
janus = "0.1"
janus-kafka = { path = "../../kafka" }
structopt = "0.3"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded"] }
