[package]
name = "janus-example-async-std-kafka"
version = "0.1.0"
authors = ["Scott Raine <me@nylar.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes", "unstable"]}
futures = "0.3"
janus = { version = "0.1", path = "../.." }
janus-kafka = { path = "../../kafka", default-features = false, features = ["smol-rt"] }
structopt = "0.3"
