[package]
name = "janus-example-sync-kafka"
version = "0.1.0"
authors = ["Scott Raine <me@nylar.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
janus = { version = "0.1", path = "../.." }
janus-kafka = { path = "../../kafka" }
structopt = "0.3"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded"] }
